--- a/index.html
+++ b/index.html
@@ -99,7 +99,25 @@ quanto as metralhadoras e canhões.<br>
 	&emsp;Em 1917, os Estados Unidos, que se mantivera fora da guerra, apesar de emprestar capitais e vender
 armas aos países da Entente, principalmente à Inglaterra, declaram guerra à Alemanha. Nesse
 mesmo ano, a Rússia saiu do conflito, por conta da Revolução de 1917, que derrubou o czar e
-implantou o socialismo.
+implantou o socialismo.<br>
+<br>
+<strong>Fim da Guerra: Vinicius</strong><br>
+	&emsp;Mesmo a Alemanha sofrendo sucessivas derrotas e com seus aliados já rendidos,
+o governo alemão continuava na guerra. O povo alemão se revoltou e os
+soldados e operários forçaram o kaiser (imperador) a abdicar. Formou-se um governo provisório e
+foi proclamada a <strong>República de Weimar</strong>. No dia 11 de novembro de 1918, o novo governo assinou
+a rendição alemã. A Primeira Guerra chegava ao fim, mas a paz geral só foi firmada em 1919,
+com a assinatura do <strong>Tratado de Versalhes</strong>.<br>
+	&emsp;Entre os termos do tratado, estava a cessão de regiões
+do território alemão para as nações fronteiriças. A Alemanha também perdeu suas colônias africanas
+e a República de Weimar foi obrigada a aceitar a independência da Áustria. Igualmente, teve que
+pagar uma indenização de 33 milhões de dólares pelos prejuízos causados pelo conflito.<br>
+<br>
+<strong>Consequências: Jonas</strong><br>
+	&emsp;A Primeira Guerra Mundial teve muitas consequências, incluindo a morte de milhões de pessoas, a
+destruição de cidades e vilarejos, e a perda de territórios por parte das nações derrotadas.
+A guerra também levou à criação da Liga das Nações, precursora da Organização das Nações Unidas,
+e mudou drasticamente a ordem mundial. Também houve o fim de vários impérios, como a Rússia.
 		</p>
 	</body>
 </html>
