--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ corrida aconteceu devida tensão entre as nações imperialistas.<br>
 	&emsp;As antigas rivalidades alemâs, França, Rússia e Reino
 Unido, foi um importante fator: os desentendimentos quanto às questões de limite nas colônias
 gerados pela Conferência de Berlim (1880), a Guerra Franco-Prussiana e A rivalidade russo-germânica.
-Em 1908, após a <strong>Áustria</strong> anunciou a anexação da Bósnia-Herzegóvina, contrariando os interesses sérvios e russos,
+Em 1908, após a <strong>Áustria</strong> anunciar a anexação da Bósnia-Herzegóvina, contrariando os interesses sérvios e russos,
 a fim de mostrar uma boa relação entre os novos súditos, o herdeiro do trono Austríaco, o
 arquiduque <strong>Francisco Ferdinando</strong>, fez uma visita à região junto com sua esposa, em 28 de
 junho de 1914. Neste dia, Gavrillo Princip, um estudante membro do grupo <strong>"Jovem Bósnia"</strong>, assassinou Francisco Ferdinando e sua esposa,
