--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Primeira Guerra Mundial</p>
 		<div class="text-center">	
 			<audio controls width="300">
 				<source src="./podcast.mp3" type="audio/mpeg">
-			</audio> <p><strong>isso é só um teste</strong></p>
+			</audio> <p><strong></strong></p>
 		</div>
 		<br>
 		<hr>
@@ -55,7 +55,7 @@ Primeira Guerra Mundial</p>
 		<!--Roteiro-->
 		<p class="title">Roteiro</p>
 		<p><strong>Introdução: Vinicius</strong><br>
-	&emsp;A Primeira <strong>Guerra Mundial</strong>, ou <strong>Guerra</strong>,
+	&emsp;A Primeira <strong>Guerra Mundial</strong>, ou <strong>Grande Guerra</strong>,
 foi um conflito militar que aconteceu entre 1914 e 1918 e
 envolveu várias nações ao redor do mundo. Ela foi um marco na
 história da humanidade. Foi a primeira guerra do século XX[20] e o primeiro conflito em
